Revert "Merge pull request #17 from Mingyukim0825/mingyuKim"
This reverts commit 5741d0b3af314db9295e7fcb4cf3359c4346231a, reversing
changes made to 75459818862bdd94d27b8dce9755bee3f13e894f.