@@ -15,21 +15,14 @@ import org.springframework.web.socket.WebSocketSession;
 import org.springframework.web.socket.client.standard.StandardWebSocketClient;
 import org.springframework.web.socket.handler.ConcurrentWebSocketSessionDecorator;
 import org.springframework.web.socket.handler.TextWebSocketHandler;
-import sign.language.domain.CallSession;
-import sign.language.domain.CallSubtitle;
-import sign.language.domain.User;
 import sign.language.dto.AiFeatureMessage;
 import sign.language.dto.SignalMessage;
-import sign.language.repository.CallRepository;
-import sign.language.repository.SubtitleRepository;
-import sign.language.repository.UserRepository;
+import sign.language.request.CallSubtitleRequest;
+import sign.language.response.CallSubtitleResponse;
 
 import java.io.IOException;
 import java.net.URI;
-import java.time.ZonedDateTime;
-import java.util.LinkedHashMap;
 import java.util.Map;
-import java.util.Optional;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
@@ -51,15 +44,12 @@ public class AiWebSocketClientService extends TextWebSocketHandler {
 
     private final SimpMessagingTemplate messagingTemplate;
     private final ObjectMapper objectMapper;
-    private final CallRepository callRepository;
-    private final UserRepository userRepository;
-    private final SubtitleRepository subtitleRepository;
+    private final CallService callService;
 
     private WebSocketSession aiSession;
     private final ScheduledExecutorService reconnectScheduler = Executors.newSingleThreadScheduledExecutor();
 
-    // 세션별(sessionId) 발신자 ID(senderId) 매핑 보존 (동시 통화 시 발신자 뒤바뀜 방지)
-    private final Map<String, Long> sessionSenderMap = new ConcurrentHashMap<>();
+    // 통화방(callId)별 최근 랜드마크를 보낸 발신자 ID(senderId) 매핑 (1L 고정 방지)
     private final Map<String, Long> lastSenderIdMap = new ConcurrentHashMap<>();
 
     @PostConstruct
@@ -119,44 +109,59 @@ public class AiWebSocketClientService extends TextWebSocketHandler {
     }
 
     /**
-     * AI 서버 규격에 맞춰 정확히 6개 필드만 전송 (extra="forbid" 대응)
+     * Android -> Spring으로 수신된 특징 데이터를 AI 규격에 맞게 릴레이 전송
      */
     public void sendFeatures(AiFeatureMessage message) {
         if (message == null) return;
 
-        // sessionId별 발신자 ID 보존 (동시 통화 시 자막 발신자 덮어쓰임 방지)
-        if (message.getSessionId() != null && message.getSenderId() != null) {
-            sessionSenderMap.put(message.getSessionId(), message.getSenderId());
-            lastSenderIdMap.put(message.getCallId(), message.getSenderId());
-        }
-
         if (aiSession == null || !aiSession.isOpen()) {
-            log.warn("⚠️ [AI WebSocket] AI Session is not connected. Attempting reconnection...");
+            log.warn("⚠️ [AI WebSocket] AI session is not connected. Attempting reconnection...");
             connectToAiServer();
             return;
         }
 
         try {
-            // 규격서에 명시된 정확한 6개 필드만 JSON으로 구성
-            Map<String, Object> payloadMap = new LinkedHashMap<>();
+            // UUID 포맷 검증 및 변환
+            String validSessionId = ensureValidUuid(message.getSessionId());
+            String validCallId = ensureValidUuid(message.getCallId());
+
+            // callId별 발신자 ID 보존 (AI 추론 자막 생성 시 진짜 senderId 복원용)
+            if (message.getSenderId() != null) {
+                lastSenderIdMap.put(validCallId, message.getSenderId());
+            }
+
+            // AI 서버 표준 스키마 6개 필드 구성
+            Map<String, Object> payloadMap = new java.util.LinkedHashMap<>();
             payloadMap.put("type", "landmark_frame");
-            payloadMap.put("sessionId", message.getSessionId());
-            payloadMap.put("callId", message.getCallId());
+            payloadMap.put("sessionId", validSessionId);
+            payloadMap.put("callId", validCallId);
             payloadMap.put("sequence", message.getSequence());
             payloadMap.put("timestampMs", message.getTimestampMs());
             payloadMap.put("features", message.getFeatures());
 
             String jsonPayload = objectMapper.writeValueAsString(payloadMap);
-            log.info("📤 [Spring -> AI Payload] seq: {}, callId: {}", message.getSequence(), message.getCallId());
+            log.info("📤 [AI WebSocket Relay Sent] callId: {}, seq: {}", validCallId, message.getSequence());
 
             aiSession.sendMessage(new TextMessage(jsonPayload));
         } catch (IOException e) {
-            log.error("🔴 [AI WebSocket] Failed to send features to AI server: {}", e.getMessage());
+            log.error("🔴 [AI WebSocket] Failed to send message to AI Server: {}", e.getMessage());
+        }
+    }
+
+    private String ensureValidUuid(String value) {
+        if (value == null || value.trim().isEmpty()) {
+            return java.util.UUID.randomUUID().toString();
+        }
+        try {
+            java.util.UUID.fromString(value);
+            return value;
+        } catch (IllegalArgumentException e) {
+            return java.util.UUID.nameUUIDFromBytes(value.getBytes()).toString();
         }
     }
 
     /**
-     * AI 서버로부터 수어 추론 결과(prediction) 또는 에러(error)가 도착했을 때 처리
+     * AI 서버로부터 수어 추론 결과(prediction) 또는 상태(status), 에러(error)가 도착했을 때 처리
      */
     @Override
     protected void handleTextMessage(WebSocketSession session, TextMessage message) {
@@ -166,94 +171,61 @@ public class AiWebSocketClientService extends TextWebSocketHandler {
 
             JsonNode rootNode = objectMapper.readTree(payload);
 
-            String type = rootNode.has("type") ? rootNode.get("type").asText() : "";
-            String status = rootNode.has("status") ? rootNode.get("status").asText() : "";
-            String label = rootNode.has("label") ? rootNode.get("label").asText() : "";
-            String prediction = rootNode.has("prediction") ? rootNode.get("prediction").asText() : "";
-            String callId = rootNode.has("callId") ? rootNode.get("callId").asText() : "";
-            String sessionId = rootNode.has("sessionId") ? rootNode.get("sessionId").asText() : "";
+            String type = rootNode.path("type").asText("");
+            String status = rootNode.path("status").asText("");
+            String label = rootNode.path("label").asText("");
+            String prediction = rootNode.path("prediction").asText("");
+            String callId = rootNode.path("callId").asText("");
 
-            // 1. AI 서버 에러 응답 수신 처리 -> 로그 남김 및 상관관계 존재 시에만 에러 채널 전달 (1L fallback 제거)
+            // 1. AI 서버 에러 응답 수신 처리
             if ("error".equalsIgnoreCase(type)) {
-                String errorCode = rootNode.has("code") ? rootNode.get("code").asText() : "AI_ERROR";
-                String errorMsg = rootNode.has("message") ? rootNode.get("message").asText() : "AI processing failed";
+                String errorCode = rootNode.path("code").asText("AI_ERROR");
+                String errorMsg = rootNode.path("message").asText("AI processing failed");
                 log.error("🔴 [AI WebSocket Error] code: {}, message: {}", errorCode, errorMsg);
-
-                Long errSenderId = null;
-                if (!sessionId.isEmpty() && sessionSenderMap.containsKey(sessionId)) {
-                    errSenderId = sessionSenderMap.get(sessionId);
-                } else if (!callId.isEmpty() && lastSenderIdMap.containsKey(callId)) {
-                    errSenderId = lastSenderIdMap.get(callId);
-                }
-
-                if (errSenderId != null) {
-                    messagingTemplate.convertAndSend("/sub/errors/" + errSenderId, Map.of(
-                            "status", "ERROR",
-                            "code", errorCode,
-                            "message", errorMsg
-                    ));
-                    log.info("📢 [AI Error Notification Sent] senderId: {}, code: {}", errSenderId, errorCode);
-                }
                 return;
             }
 
             // 2. AI 서버 상태 알림 (warming_up, analyzing 등)
             if ("status".equalsIgnoreCase(type)) {
-                int buffered = rootNode.has("bufferedFrames") ? rootNode.get("bufferedFrames").asInt() : 0;
-                int required = rootNode.has("requiredFrames") ? rootNode.get("requiredFrames").asInt() : 30;
+                int buffered = rootNode.path("bufferedFrames").asInt(0);
+                int required = rootNode.path("requiredFrames").asInt(30);
                 log.info("ℹ️ [AI Frame Status] status: {}, frames: {}/{}", status, buffered, required);
                 return;
             }
 
-            // 3. AI 추론 결과 처리 (sessionId 기반 senderId 1:1 복원 후 DB 영속 저장)
+            // 3. AI 추론 결과 처리
             String subtitleText = (label != null && !label.trim().isEmpty()) ? label : prediction;
-            Long realSenderId = rootNode.has("senderId") ? rootNode.get("senderId").asLong() : sessionSenderMap.getOrDefault(sessionId, lastSenderIdMap.getOrDefault(callId, 1L));
 
             if (("prediction".equalsIgnoreCase(type) || "prediction".equalsIgnoreCase(status))
-                    && subtitleText != null && !subtitleText.trim().isEmpty()) {
+                    && subtitleText != null && !subtitleText.trim().isEmpty()
+                    && !callId.isBlank()) {
 
-                // DB 영속 저장 수행
-                SignalMessage subtitleMessage = saveAndBuildSubtitleMessage(callId, realSenderId, subtitleText);
+                // 실제 수어를 전송했던 발화자의 senderId 복원 (없으면 기본값 1L)
+                Long realSenderId = rootNode.has("senderId") 
+                        ? rootNode.get("senderId").asLong() 
+                        : lastSenderIdMap.getOrDefault(callId, 1L);
 
-                if (subtitleMessage != null) {
-                    // 통화방 구독자들(/sub/call/{callId})에게 실시간 자막 브로드캐스트
-                    messagingTemplate.convertAndSend("/sub/call/" + callId, subtitleMessage);
-                    log.info("📢 [Subtitle Broadcasted] callId: {}, senderId: {}, text: {}", callId, realSenderId, subtitleText);
-                }
+                // 3-1. DB에 자막 저장 및 생성된 ID/시각 획득
+                CallSubtitleRequest subtitleRequest = new CallSubtitleRequest(realSenderId, subtitleText);
+                CallSubtitleResponse savedSubtitle = callService.saveSubtitle(callId, subtitleRequest);
+
+                // 3-2. 브로드캐스트용 메시지 객체 생성
+                SignalMessage subtitleMessage = SignalMessage.builder()
+                        .type(SignalMessage.MessageType.SUBTITLE)
+                        .callId(callId)
+                        .senderId(realSenderId)
+                        .textContent(subtitleText)
+                        .subtitleId(savedSubtitle.getSubtitleId())
+                        .createdAt(savedSubtitle.getCreatedAt())
+                        .build();
+
+                // 3-3. 통화방 구독자들(/sub/call/{callId})에게 실시간 자막 브로드캐스트
+                messagingTemplate.convertAndSend("/sub/call/" + callId, subtitleMessage);
+                log.info("📢 [Subtitle Broadcasted] callId: {}, senderId: {}, subtitleId: {}, text: {}",
+                        callId, realSenderId, savedSubtitle.getSubtitleId(), subtitleText);
             }
         } catch (Exception e) {
             log.error("🔴 [AI WebSocket] Failed to handle AI server message: {}", e.getMessage());
-        }
-    }
-
-    /**
-     * AI 수어 자막 결과를 DB에 영구 저장하고 브로드캐스트용 SignalMessage 생성
-     */
-    private SignalMessage saveAndBuildSubtitleMessage(String callId, Long senderId, String textContent) {
-        try {
-            Optional<CallSession> callSessionOpt = callRepository.findById(callId);
-            Optional<User> senderOpt = userRepository.findById(senderId);
-
-            if (callSessionOpt.isPresent() && senderOpt.isPresent()) {
-                CallSubtitle subtitle = CallSubtitle.create(callSessionOpt.get(), senderOpt.get(), textContent);
-                CallSubtitle savedSubtitle = subtitleRepository.save(subtitle);
-                log.info("💾 [AI Subtitle Saved DB] subtitleId: {}, callId: {}", savedSubtitle.getId(), callId);
-
-                return SignalMessage.builder()
-                        .type(SignalMessage.MessageType.SUBTITLE)
-                        .callId(callId)
-                        .senderId(senderId)
-                        .textContent(textContent)
-                        .subtitleId(savedSubtitle.getId())
-                        .createdAt(savedSubtitle.getCreatedAt() != null ? savedSubtitle.getCreatedAt().atZone(java.time.ZoneId.systemDefault()) : ZonedDateTime.now())
-                        .build();
-            } else {
-                log.warn("⚠️ [AI Subtitle DB Skip] Session or User not found in DB (callId: {}, senderId: {}). Skipping broadcast.", callId, senderId);
-                return null;
-            }
-        } catch (Exception e) {
-            log.error("🔴 [AI Subtitle Save Error] Failed to persist to DB: {}", e.getMessage());
-            return null;
         }
     }
 }
